Add country flag icons to live feed
- Integrated flag-icons CSS library (v7.3.2) from CDN
- Added SVG flag icons next to country codes in LiveFeed component
- Updated CSS spacing to accommodate flags (min-width: 70px)
- Flags display universally across all browsers including Chrome Windows
- Display format: flag icon followed by bracketed country code (e.g., 🇺🇸 [US])

--- a/SlurpJob/Components/App.razor
+++ b/SlurpJob/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="@Assets["app.css"]?v=@DateTime.UtcNow.Ticks" />
     <link rel="stylesheet" href="@Assets["SlurpJob.styles.css"]?v=@DateTime.UtcNow.Ticks" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.3.2/css/flag-icons.min.css" />
     <HeadOutlet />
 </head>
 
