--- a/SlurpJob/Components/Pages/Dashboard.razor
+++ b/SlurpJob/Components/Pages/Dashboard.razor
@@ -9,7 +9,7 @@
 @inject IDbContextFactory<SlurpContext> DbFactory
 @implements IDisposable
 
-<PageTitle>Dashboard</PageTitle>
+<PageTitle>SlurpJob</PageTitle>
 
 <div class="dashboard-container">
     <div class="dashboard-header">
