--- a/SlurpJob/Components/LiveFeed.razor
+++ b/SlurpJob/Components/LiveFeed.razor
@@ -7,7 +7,7 @@
 
 <div class="card bg-dark text-light h-100 d-flex flex-column">
     <div class="card-body p-0 overflow-auto flex-grow-1">
-        <div class="list-group list-group-flush">
+        <div class="list-group list-group-flush live-feed-list">
             @foreach (var evt in _events)
             {
                 <button type="button" class="list-group-item list-group-item-action bg-dark text-light border-secondary p-0" style="border-bottom: 1px solid #222 !important;" @onclick="() => OnEventClick(evt)">
@@ -170,6 +170,7 @@
         font-family: monospace;
         font-size: 0.75rem;
         line-height: normal;
+        min-width: 600px; /* Force horizontal layout to be wide enough for all columns */
     }
 
     .segment {
@@ -226,5 +227,10 @@
 
     .list-group-item:hover .segmented-row {
         background-color: #222;
+    }
+
+    .live-feed-list {
+        min-width: 100%;
+        width: max-content; /* Ensure container grows to fit the wide rows, triggering scroll on parent */
     }
 </style>
