--- a/SlurpJob/Components/_Imports.razor
+++ b/SlurpJob/Components/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using SlurpJob
 @using SlurpJob.Components
+@using SlurpJob.Components.Layout
+@using SlurpJob.Models
+@using SlurpJob.Models.Filters
+@using SlurpJob.Services
